--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <link rel="stylesheet" href="assets/style.css" />
-  <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" /> -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="https://getbootstrap.com/docs/4.6" />
+  
   <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" /> -->
   <title>Weather Dashboard</title>
 </head>
@@ -36,14 +37,31 @@
                 <hr class="hr weather-hr" />
               </div>
             </div>
+
           </div>
         </form>
-        <div class="list-group" id="history"></div>
+        <div class="list-group" id="history">
+          <button type="button" class="btn btn-primary" data-state="hidden">Search 1</button><br>
+          <button type="button" class="btn btn-primary" data-state="hidden">Search 2</button><br>
+          <button type="button" class="btn btn-primary" data-state="hidden">Search 3</button><br>
+          <button type="button" class="btn btn-primary" data-state="hidden">Search 4</button><br>
+          <button type="button" class="btn btn-primary" data-state="hidden">Search 5</button><br>
+        </div>
       </aside>
 
       <div class="col-lg-9 pb-3">
-        <section id="today" class="mt-3" role="region" aria-live="polite"></section>
-        <section id="forecast" class="row mt-3" role="region" aria-live="polite"></section>
+        <section id="today" class="mt-3" role="region" aria-live="polite">Today</section>
+        <div class="card" style="width: 18rem;">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+            <p class="card-text">Date: </p>
+            <p class="card-text">Temp:</p>
+            <p class="card-text">Wind:</p>
+            <p class="card-text">Humidity: </p>
+          </div>
+        </div>
+        <section id="forecast" class="row mt-3" role="region" aria-live="polite">Forecast</section>
       </div>
     </div>
   </div>
