comment clean up

--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
 
           </div>
         </form>
+
+        <div class="container-fluid" style="max-width: 1400px">
+          <div class="row">
+            <aside class="col-lg-3 pb-3">
         <div class="list-group" id="history">
           <button type="button" class="btn btn-primary" data-state="hidden">Search 1</button><br>
           <button type="button" class="btn btn-primary" data-state="hidden">Search 2</button><br>
@@ -47,6 +51,8 @@
           <button type="button" class="btn btn-primary" data-state="hidden">Search 4</button><br>
           <button type="button" class="btn btn-primary" data-state="hidden">Search 5</button><br>
         </div>
+      </div>
+    </div>
       </aside>
 
       <div class="col-lg-9 pb-3">
