--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="https://getbootstrap.com/docs/4.6" />
-  
-  <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" /> -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+    integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+
   <title>Weather Dashboard</title>
 </head>
 
@@ -21,7 +22,7 @@
   <!-- max-width for ultra wide resolutions -->
   <div class="container-fluid" style="max-width: 1400px">
     <div class="row">
-      <aside class="col-lg-3 pb-3">
+      <aside class="col-lg-6 pb-3">
         <h2 id="form-heading" class="mt-1 h3 form-label">
           Search for a City:
         </h2>
@@ -41,42 +42,113 @@
           </div>
         </form>
 
-        <div class="container-fluid" style="max-width: 1400px">
+        <div class="container-fluid" style="max-width: 2400px">
           <div class="row">
-            <aside class="col-lg-3 pb-3">
-        <div class="list-group" id="history">
-          <button type="button" class="btn btn-primary" data-state="hidden">Search 1</button><br>
-          <button type="button" class="btn btn-primary" data-state="hidden">Search 2</button><br>
-          <button type="button" class="btn btn-primary" data-state="hidden">Search 3</button><br>
-          <button type="button" class="btn btn-primary" data-state="hidden">Search 4</button><br>
-          <button type="button" class="btn btn-primary" data-state="hidden">Search 5</button><br>
-        </div>
-      </div>
-    </div>
-      </aside>
+            <aside class="col-lg-6 pb-3">
+              <div class="list-group" id="history">
+                <button type="button" class="btn btn-primary" id="1" data-state="hidden"></button><br>
+                <button type="button" class="btn btn-primary" id="2" data-state="hidden"></button><br>
+                <button type="button" class="btn btn-primary" id="3" data-state="hidden"></button><br>
+                <button type="button" class="btn btn-primary" id="4" data-state="hidden"></button><br>
+                <button type="button" class="btn btn-primary" id="5" data-state="hidden"></button><br>
+              </div>
 
-      <div class="col-lg-9 pb-3">
-        <section id="today" class="mt-3" role="region" aria-live="polite">Today</section>
-        <div class="card" style="width: 18rem;">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-            <p class="card-text">Date: </p>
-            <p class="card-text">Temp:</p>
-            <p class="card-text">Wind:</p>
-            <p class="card-text">Humidity: </p>
+            </aside>
           </div>
         </div>
-        <section id="forecast" class="row mt-3" role="region" aria-live="polite">Forecast</section>
-      </div>
-    </div>
-  </div>
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-lg-9 pb-3">
+              <section id="today" class="mt-3" role="region" aria-live="polite">Today's Weather</section>
+              <div class="card" style="width: 60rem;">
+                <div class="card-body">
+                  <h5 class="card-title">Today's Weather</h5>
+                  <h6 class="card-subtitle mb-2 text-muted">*icon*</h6>
+                  <p class="card-text">Date: </p>
+                  <p class="card-text">Temp:</p>
+                  <p class="card-text">Wind:</p>
+                  <p class="card-text">Humidity: </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <section id="forecast" class="row mt-3" role="region" aria-live="polite">Forecast</section>
 
-  <!-- Moment.js -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
-  <!-- jQuery -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="assets/script.js"></script>
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-lg-9 pb-3">
+                <section id="today" class="mt-3" role="region" aria-live="polite"></section>
+                <div class="card" style="width: 18rem;">
+                  <div class="card-body">
+                    <h5 class="card-title">5 Day forecast: 1 </h5>
+                    <h6 class="card-subtitle mb-2 text-muted">*icon*</h6>
+                    <p class="card-text">Date: </p>
+                    <p class="card-text">Temp:</p>
+                    <p class="card-text">Wind:</p>
+                    <p class="card-text">Humidity: </p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-9 pb-3">
+                <section id="today" class="mt-3" role="region" aria-live="polite"></section>
+                <div class="card" style="width: 18rem;">
+                  <div class="card-body">
+                    <h5 class="card-title">5 Day forecast: 2</h5>
+                    <h6 class="card-subtitle mb-2 text-muted"></h6>
+                    <p class="card-text">Date: </p>
+                    <p class="card-text">Temp:</p>
+                    <p class="card-text">Wind:</p>
+                    <p class="card-text">Humidity: </p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-9 pb-3">
+                <section id="today" class="mt-3" role="region" aria-live="polite"></section>
+                <div class="card" style="width: 18rem;">
+                  <div class="card-body">
+                    <h5 class="card-title">5 Day forecast: 3</h5>
+                    <h6 class="card-subtitle mb-2 text-muted"></h6>
+                    <p class="card-text">Date: </p>
+                    <p class="card-text">Temp:</p>
+                    <p class="card-text">Wind:</p>
+                    <p class="card-text">Humidity: </p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-9 pb-3">
+                <section id="today" class="mt-3" role="region" aria-live="polite"></section>
+                <div class="card" style="width: 18rem;">
+                  <div class="card-body">
+                    <h5 class="card-title">5 Day forecast: 4</h5>
+                    <h6 class="card-subtitle mb-2 text-muted"></h6>
+                    <p class="card-text">Date: </p>
+                    <p class="card-text">Temp:</p>
+                    <p class="card-text">Wind:</p>
+                    <p class="card-text">Humidity: </p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-9 pb-3">
+                <section id="today" class="mt-3" role="region" aria-live="polite"></section>
+                <div class="card" style="width: 18rem;">
+                  <div class="card-body">
+                    <h5 class="card-title">5 Day forecast: 5</h5>
+                    <h6 class="card-subtitle mb-2 text-muted"></h6>
+                    <p class="card-text" id="date5">Date: </p>
+                    <p class="card-text" id="temp5">Temp:</p>
+                    <p class="card-text" id="wind5">Wind:</p>
+                    <p class="card-text" id="humid5">Humidity: </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+
+            <!-- Moment.js -->
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
+            <!-- jQuery -->
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+            <script src="assets/script.js"></script>
 </body>
 
 </html>
