--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
       <aside class="col-lg-6 pb-3">
         <h2 id="form-heading" class="mt-1 h3 form-label">
           Search for a City:
-        </h2>
+        </h2> <br>
         <form id="search-form" class="form">
           <div class="form-inline form-group">
             <div class="input-group">
-              <input class="form-input weather-search" type="text" id="search-input" placeholder="London"
+              <input class="form-input weather-search" type="text" id="search-input" placeholder="Enter city here"
                 aria-labelledby="form-heading" aria-controls="today forecast" />
               <div class="input-group-append">
                 <button type="submit" class="btn search-button" id="search-button" aria-label="submit search">
@@ -38,117 +38,131 @@
                 <hr class="hr weather-hr" />
               </div>
             </div>
-
+          </aside>
           </div>
         </form>
 
         <div class="container-fluid" style="max-width: 2400px">
           <div class="row">
-            <aside class="col-lg-6 pb-3">
+            <aside class="col-lg-4 pb-3">
               <div class="list-group" id="history">
-                <button type="button" class="btn btn-primary" id="1" data-state="hidden"></button><br>
-                <button type="button" class="btn btn-primary" id="2" data-state="hidden"></button><br>
-                <button type="button" class="btn btn-primary" id="3" data-state="hidden"></button><br>
-                <button type="button" class="btn btn-primary" id="4" data-state="hidden"></button><br>
-                <button type="button" class="btn btn-primary" id="5" data-state="hidden"></button><br>
+                <br>
+                <button type="button" class="btn btn-primary" id="button-1" data-state="hidden"></button><br>
+                <button type="button" class="btn btn-primary" id="button-2" data-state="hidden"></button><br>
+                <button type="button" class="btn btn-primary" id="button-3" data-state="hidden"></button><br>
+                <button type="button" class="btn btn-primary" id="button-4" data-state="hidden"></button><br>
+                <button type="button" class="btn btn-primary" id="button-5" data-state="hidden"></button><br>
               </div>
-
             </aside>
-          </div>
-        </div>
-        <div class="container-fluid">
-          <div class="row">
-            <div class="col-lg-9 pb-3">
+            <div class="col-lg-6 pb-3">
               <section id="today" class="mt-3" role="region" aria-live="polite">Today's Weather</section>
-              <div class="card" style="width: 60rem;">
+              <div class="card" style="width: 50rem;">
                 <div class="card-body">
-                  <h5 class="card-title">Today's Weather</h5>
-                  <h6 class="card-subtitle mb-2 text-muted">*icon*</h6>
-                  <p class="card-text">Date: </p>
-                  <p class="card-text">Temp:</p>
-                  <p class="card-text">Wind:</p>
-                  <p class="card-text">Humidity: </p>
+                  <h5 class="card-title" id="city"></h5>
+                  <h6 class="card-subtitle mb-2 text-muted" id="today-icon">*icon*</h6>
+                  <p class="card-text" id="today-date">Date: </p>
+                  <p class="card-text" id="today-temp">Temp:</p>
+                  <p class="card-text" id="today-wind">Wind:</p>
+                  <p class="card-text" id="today-humid">Humidity: </p>
                 </div>
               </div>
             </div>
           </div>
-          <section id="forecast" class="row mt-3" role="region" aria-live="polite">Forecast</section>
+        </div>
+
+<section>
+        <div class="container-fluid">
+          <div class="row">
+
+          </div>
+  
 
           <div class="container-fluid">
             <div class="row">
-              <div class="col-lg-9 pb-3">
-                <section id="today" class="mt-3" role="region" aria-live="polite"></section>
-                <div class="card" style="width: 18rem;">
+              <div class="col-lg-2 pb-3">
+                <section id="day1" class="mt-3" role="region" aria-live="polite"></section>
+                <div class="card" style="width: 10rem;">
                   <div class="card-body">
-                    <h5 class="card-title">5 Day forecast: 1 </h5>
-                    <h6 class="card-subtitle mb-2 text-muted">*icon*</h6>
-                    <p class="card-text">Date: </p>
-                    <p class="card-text">Temp:</p>
-                    <p class="card-text">Wind:</p>
-                    <p class="card-text">Humidity: </p>
+                    <h3 id="forecast" class="row mt-3" role="region" aria-live="polite">5 Day Weather Forecast</h3>
+             
                   </div>
                 </div>
               </div>
-              <div class="col-lg-9 pb-3">
-                <section id="today" class="mt-3" role="region" aria-live="polite"></section>
-                <div class="card" style="width: 18rem;">
+              <div class="col-lg-2 pb-3">
+                <section id="day1" class="mt-3" role="region" aria-live="polite"></section>
+                <div class="card" style="width: 10rem;">
                   <div class="card-body">
-                    <h5 class="card-title">5 Day forecast: 2</h5>
-                    <h6 class="card-subtitle mb-2 text-muted"></h6>
-                    <p class="card-text">Date: </p>
-                    <p class="card-text">Temp:</p>
-                    <p class="card-text">Wind:</p>
-                    <p class="card-text">Humidity: </p>
+                    <h5 class="card-text" id="day1-date"></h5>
+                    <h6 class="card-subtitle mb-2 text-muted" id="day1-icon"></h6>
+                    <br>
+                    <p class="card-text" id="day1-temp">Temp:</p>
+                    <p class="card-text" id="day1-wind">Wind:</p>
+                    <p class="card-text" id="day1-humid">Humidity: </p>
                   </div>
                 </div>
               </div>
-              <div class="col-lg-9 pb-3">
-                <section id="today" class="mt-3" role="region" aria-live="polite"></section>
-                <div class="card" style="width: 18rem;">
+              <div class="col-lg-2 pb-3">
+                <section id="day2" class="mt-3" role="region" aria-live="polite"></section>
+                <div class="card" style="width: 10rem;">
                   <div class="card-body">
-                    <h5 class="card-title">5 Day forecast: 3</h5>
-                    <h6 class="card-subtitle mb-2 text-muted"></h6>
-                    <p class="card-text">Date: </p>
-                    <p class="card-text">Temp:</p>
-                    <p class="card-text">Wind:</p>
-                    <p class="card-text">Humidity: </p>
+                    <h5 class="card-text" id="day2-date"> </h5>
+                    <h6 class="card-subtitle mb-2 text-muted" id="day2-icon"> </h6>
+                    <br>
+                    <p class="card-text" id="day2-temp">Temp: </p>
+                    <p class="card-text" id="day2-wind">Wind: </p>
+                    <p class="card-text" id="day2-humid">Humidity: </p>
                   </div>
                 </div>
               </div>
-              <div class="col-lg-9 pb-3">
-                <section id="today" class="mt-3" role="region" aria-live="polite"></section>
-                <div class="card" style="width: 18rem;">
+              <div class="col-lg-2 pb-3">
+                <section id="day3" class="mt-3" role="region" aria-live="polite"></section>
+                <div class="card" style="width: 10rem;">
                   <div class="card-body">
-                    <h5 class="card-title">5 Day forecast: 4</h5>
-                    <h6 class="card-subtitle mb-2 text-muted"></h6>
-                    <p class="card-text">Date: </p>
-                    <p class="card-text">Temp:</p>
-                    <p class="card-text">Wind:</p>
-                    <p class="card-text">Humidity: </p>
+                    <h5 class="card-text" id="day3-date"></h5>
+                    <h6 class="card-subtitle mb-2 text-muted" id="day3-icon"></h6>
+                    <br>
+                    <p class="card-text" id="day3-temp">Temp:</p>
+                    <p class="card-text" id="day3-wind">Wind:</p>
+                    <p class="card-text" id="day3-humid">Humidity: </p>
                   </div>
                 </div>
               </div>
-              <div class="col-lg-9 pb-3">
-                <section id="today" class="mt-3" role="region" aria-live="polite"></section>
-                <div class="card" style="width: 18rem;">
+              <div class="col-lg-2 pb-3">
+                <section id="day4"  class="mt-3" role="region" aria-live="polite"></section>
+                <div class="card" style="width: 10rem;">
                   <div class="card-body">
-                    <h5 class="card-title">5 Day forecast: 5</h5>
-                    <h6 class="card-subtitle mb-2 text-muted"></h6>
-                    <p class="card-text" id="date5">Date: </p>
-                    <p class="card-text" id="temp5">Temp:</p>
-                    <p class="card-text" id="wind5">Wind:</p>
-                    <p class="card-text" id="humid5">Humidity: </p>
+                    <h5 class="card-text" id="day4-date"> </h5>
+                    <h6 class="card-subtitle mb-2 text-muted" id="day4-icon"> </h6>
+                    <br>
+                    <p class="card-text" id="day4-temp">Temp: </p>
+                    <p class="card-text" id="day4-wind">Wind: </p>
+                    <p class="card-text" id="day4-humid">Humidity: </p>
                   </div>
+                </div>
+              </div>
+              <div class="col-lg-2 pb-3">
+                <section id="day5" class="mt-3" role="region" aria-live="polite"></section>
+                <div class="card" style="width: 10rem;">
+                  <div class="card-body">
+                    <h5 class="card-text" id="day5-date"></h5>
+                    <h6 class="card-subtitle mb-2 text-muted" id="day5-icon"></h6>
+                    <br>
+                    <p class="card-text" id="day5-temp">Temp:</p>
+                    <p class="card-text" id="day5-wind">Wind:</p>
+                    <p class="card-text" id="day5-humid">Humidity: </p>
+                  </div>
+
                 </div>
               </div>
             </div>
+          </div>
+</section>
 
-
-            <!-- Moment.js -->
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
-            <!-- jQuery -->
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-            <script src="assets/script.js"></script>
+          <!-- Moment.js -->
+          <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
+          <!-- jQuery -->
+          <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+          <script src="assets/script.js"></script>
 </body>
 
 </html>
