--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
             <button type="button" class="btn btn-primary" id="button-3" data-state="hidden"></button><br>
             <button type="button" class="btn btn-primary" id="button-4" data-state="hidden"></button><br>
             <button type="button" class="btn btn-primary" id="button-5" data-state="hidden"></button><br>
+            <button type="button" class="btn btn-primary" id="clear-button" data-state="hidden"> Clear Search History</button><br>
           </div>
         </aside>
         <div class="col-lg-6 pb-3">
